# block-hacker

./: README.md  package-lock.json  package.json
Components/: CreditsDisplay.tsx  GameContext.tsx  GameHeader.tsx  SatelliteGame.tsx  SkillNode.tsx  SkillTree.tsx  StatusIcon.tsx  VictoryDisplay.tsx  index.ts
app/: page.tsx
app/data/: skillsData.ts
app/hooks/: useSkillTree.ts
app/types/: skillTree.ts
app/utils/: edgeGeneration.ts  positioning.ts
contracts/: gameToken.sol
frontend/: .env  package-lock.json  package.json  tailwind.config.ts
frontend/ABI/: GameTokens.json
frontend/Components/: AirdropButton.tsx  CreditsDisplay.tsx  DecisionNode.tsx  DecisionSystem.tsx  EnhancedWeaponSystem.ts  GameContext.tsx  HackerUI.tsx  ParticleSystem.ts  ProofButtonWithAggregation.tsx  SatelliteGame.tsx  SkillNode.tsx  SkillTree.tsx  SpaceshipRenderer.ts  StatusIcon.tsx  VictoryDisplay.tsx  WeaponSystem.ts  index.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/api/airdrop-tokens/: route.ts
frontend/app/config/: SpaceshipConfigs.ts  wagmi.ts
frontend/app/data/: ClickerProgression.ts  DecisionData.ts  SkillsData.ts
frontend/app/hooks/: useAirdrop.ts  useGameProofWithAggregation.ts  useSkillTree.ts
frontend/app/lib/: airdropService.ts  risc0-client.ts
frontend/app/styles/: globals.css  skillTree.module.css
frontend/app/types/: DecisionTree.ts  SpaceshipTypes.ts
zk-service/host/: Cargo.toml
zk-service/host/src/: main.rs  relayer_client.rs
zk-service/methods/guest/: Cargo.toml
zk-service/methods/guest/src/: main.rs
