[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

actix-web = "4"
actix-cors = "0.7"

env_logger = "0.10"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
ciborium = "0.2"

reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dotenv ="0.15"